--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -95,47 +95,51 @@
   </header>
 
   <main>
-    <div class="card-grid">
+  <div class="card-grid">
 
-      <!-- Sunday Carvery -->
-<div class="card">
-  <img src="Bold-Forester-Carvery-Poster.jpg" alt="Sunday Carvery at The Bold Forester – Beef, Turkey, Gammon and Vegetarian Options">
-  <h3>Sunday Carvery Is Back!</h3>
-  <p>
-    Join us every Sunday for our full carvery – beef, turkey, gammon,
-    plus tasty vegetarian options. Served from<br><br>
-    <strong>12 noon – 9 pm</strong><br>
-    Only <strong>£15.99</strong><br><br>
+    <!-- Sunday Carvery -->
+    <div class="card">
+      <img src="Bold-Forester-Carvery-Poster.jpg" alt="Sunday Carvery at The Bold Forester – Beef, Turkey, Gammon and Vegetarian Options">
+      <h3>Sunday Carvery Is Back!</h3>
+      <p>
+        Join us every Sunday for our full carvery – beef, turkey, gammon,
+        plus tasty vegetarian options. Served from<br><br>
+        <strong>12 noon – 9 pm</strong><br>
+        Only <strong>£15.99</strong><br><br>
 
-    We’ve also launched our new <strong>Kids Menu</strong> including
-    a main, drink, and ice cream for just <strong>£4.99</strong>.<br><br>
+        We’ve also launched our new <strong>Kids Menu</strong> including
+        a main, drink, and ice cream for just <strong>£4.99</strong>.<br><br>
 
-    Book your table now at<br><br>
-    <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-      www.theboldforesternewforest.co.uk
-    </a><br>
-    or call <strong>02380 175588</strong>.
-  </p>
-  <div class="card">
-  <img src="Bold Valentines.png" alt="Valentine’s Day Chef’s Specials at The Bold Forester">
-  <h3>Valentine’s Day Chef’s Specials</h3>
-  <p><strong>Now Open for Reservations</strong></p>
-  <p>
-    Celebrate Valentine’s Day with amazing specials lovingly crafted by our chefs, perfect for a romantic evening together.<br><br>
+        Book your table now at<br><br>
+        <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+          www.theboldforesternewforest.co.uk
+        </a><br>
+        or call <strong>02380 175588</strong>.
+      </p>
+    </div>
 
-    <strong>Friday 14th February</strong><br><br>
+    <!-- Valentine's Day -->
+    <div class="card">
+      <img src="Bold Valentines.png" alt="Valentine’s Day Chef’s Specials at The Bold Forester">
+      <h3>Valentine’s Day Chef’s Specials</h3>
+      <p><strong>Now Open for Reservations</strong></p>
+      <p>
+        Celebrate Valentine’s Day with amazing specials lovingly crafted by our chefs, perfect for a romantic evening together.<br><br>
 
-    Tables are limited, so we recommend booking early to avoid disappointment.<br><br>
+        <strong>Friday 14th February</strong><br><br>
 
-    Book your table now at<br><br>
-    <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-      www.theboldforesternewforest.co.uk
-    </a><br>
-    or call <strong>02380 175588</strong>.
-  </p>
-</div>
-      
-  </main>
+        Tables are limited, so we recommend booking early to avoid disappointment.<br><br>
+
+        Book your table now at<br><br>
+        <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+          www.theboldforesternewforest.co.uk
+        </a><br>
+        or call <strong>02380 175588</strong>.
+      </p>
+    </div>
+
+  </div>
+</main>
 
   <div class="buttons">
     <a href="../../boldforester.html">⬅ Back to Pub Page</a>
