--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -97,20 +97,25 @@
   <main>
     <div class="card-grid">
       <div class="card">
-  <img src="coming soon.png" alt="Events Coming Soon">
-  <h3>Events at The New Forest Inn</h3>
-  <p><strong>No events scheduled at the moment</strong></p>
+  <img src="Quiz-Night-23rd-Jan-2026.jpeg" alt="Quiz Night at The New Forest Inn – 23rd January, 8pm">
+  <h3>Quiz Night at The New Forest Inn</h3>
+  <p><strong>Friday 23rd January • 8pm • £3 per person</strong></p>
   <p>
-    We don’t have any events planned right now, but we’re always working on something special behind the scenes.<br><br>
-    Please check back soon or keep an eye on our website and social media for upcoming events and announcements.<br><br>
-    In the meantime, you’re very welcome to join us for great food, drinks, and a warm welcome.<br><br>
-          Book your table now at<br>
-          <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-           https://www.thenewforestinn.co.uk/
-          </a><br>
-          or call <strong>02380 284690</strong>.
-        </p>
-      </div>
+    Join us for a brilliant evening of brains, banter, and beer as The New Forest Inn hosts another lively Quiz Night.<br><br>
+
+    With winter still firmly outside, enjoy the warm atmosphere of the pub, the buzz of conversation, and some friendly competition – the perfect midweek escape.<br><br>
+
+    Teams of friends, couples, and regulars will gather with pens and answer sheets at the ready. Whether you’re a seasoned quizzer or a first-timer, expect a fun, social evening full of laughs and great company.<br><br>
+
+    <strong>All proceeds go to Love The New Forest.</strong><br><br>
+
+    Book your table now at<br>
+    <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+      www.thenewforestinn.co.uk
+    </a><br>
+    or call <strong>02380 284690</strong>.
+  </p>
+</div>
   
     </div>
   </main>
