--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -124,3 +124,6 @@
   <a href="../../newforestinn.html">⬅ Back to Pub Page</a>
   <a href="../../home.html">⬅ Back to Home</a>
 </div>
+
+</body>
+</html>
