--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -115,8 +115,39 @@
     </a><br>
     or call <strong>02380 284690</strong>.
   </p>
+    <!-- Mother’s Day Card -->
+<div class="card">
+  <img src="Mothers-Day-2026.jpg" alt="Mother’s Day 2026 at The New Forest Inn">
+
+  <h3>Mother’s Day 2026</h3>
+
+  <p><strong>Sunday 15th March</strong></p>
+
+  <p>
+    Save the date! Mother’s Day will be here before we know it.<br><br>
+    Treat that special lady in your life to a delicious Sunday roast and a relaxed, welcoming atmosphere at The New Forest Inn.
+  </p>
+
+  <p>
+    <strong>Sunday Roasts available</strong><br>
+    Sittings at <strong>12.00, 2.30, 5.00 and 7.30</strong>
+  </p>
+
+  <p>
+    <strong>Booking is essential.</strong><br>
+    A <strong>£10 deposit per person</strong> is required to secure your table.
+  </p>
+
+  <p>
+    <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form"
+       class="card-link" target="_blank">
+      Book your table now
+    </a>
+  </p>
+
+  <p>or call <strong>02380 284690</strong></p>
 </div>
-  
+        
     </div>
   </main>
 
