--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -115,6 +115,8 @@
     </a><br>
     or call <strong>02380 284690</strong>.
   </p>
+      </div>
+    
     <!-- Mother’s Day Card -->
     <div class="card">
   <img src="Mothers-Day-2026.jpg" alt="Mother’s Day 2026 at The New Forest Inn">
