--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -25,7 +25,7 @@
       font-size: 2rem;
     }
 
-    .card-grid {
+    main section {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -63,6 +63,15 @@
       font-size: 0.95rem;
       line-height: 1.5;
       color: #f4f4f4;
+      margin-bottom: 1rem;
+    }
+
+    .card a {
+      display: inline-block;
+      color: #e6d8b5;
+      text-decoration: underline;
+      font-weight: bold;
+      margin-top: 0.5rem;
     }
 
     .buttons {
@@ -95,68 +104,52 @@
   </header>
 
   <main>
-  <div class="card-grid">
-    <div class="card">
-  <img src="Quiz-Night-23rd-Jan-2026.jpeg" alt="Quiz Night at The New Forest Inn – 23rd January, 8pm">
-  <h3>Quiz Night at The New Forest Inn</h3>
-  <p><strong>Friday 23rd January • 8pm • £3 per person</strong></p>
-  <p>
-    Join us for a brilliant evening of brains, banter, and beer as The New Forest Inn hosts another lively Quiz Night.<br><br>
-
-    With winter still firmly outside, enjoy the warm atmosphere of the pub, the buzz of conversation, and some friendly competition – the perfect midweek escape.<br><br>
-
-    Teams of friends, couples, and regulars will gather with pens and answer sheets at the ready. Whether you’re a seasoned quizzer or a first-timer, expect a fun, social evening full of laughs and great company.<br><br>
-
-    <strong>All proceeds go to Love The New Forest.</strong><br><br>
-
-    Book your table now at<br>
-    <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-      www.thenewforestinn.co.uk
-    </a><br>
-    or call <strong>02380 284690</strong>.
-  </p>
+    <section>
+      <div class="card">
+        <img src="Quiz-Night-23rd-Jan-2026.jpeg" alt="Quiz Night at The New Forest Inn – 23rd January, 8pm">
+        <h3>Quiz Night at The New Forest Inn</h3>
+        <p><strong>Friday 23rd January • 8pm • £3 per person</strong></p>
+        <p>
+          Join us for a brilliant evening of brains, banter, and beer as The New Forest Inn hosts another lively Quiz Night.
+        </p>
+        <p>
+          With winter still firmly outside, enjoy the warm atmosphere of the pub, the buzz of conversation, and some friendly competition – the perfect midweek escape.
+        </p>
+        <p>
+          Teams of friends, couples, and regulars will gather with pens and answer sheets at the ready. Whether you’re a seasoned quizzer or a first-timer, expect a fun, social evening full of laughs and great company.
+        </p>
+        <p><strong>All proceeds go to Love The New Forest.</strong></p>
+        <p>
+          Book your table now at<br>
+          <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form" target="_blank">
+            www.thenewforestinn.co.uk
+          </a><br>
+          or call <strong>02380 284690</strong>.
+        </p>
       </div>
-    
-    <!-- Mother’s Day Card -->
-    <div class="card">
-  <img src="Mothers-Day-2026.jpg" alt="Mother’s Day 2026 at The New Forest Inn">
 
-  <h3>Mother’s Day 2026</h3>
-
-  <p><strong>Sunday 15th March</strong></p>
-
-  <p>
-    Save the date! Mother’s Day will be here before we know it.<br><br>
-    Treat that special lady in your life to a delicious Sunday roast and a relaxed, welcoming atmosphere at The New Forest Inn.
-  </p>
-
-  <p>
-    <strong>Sunday Roasts available</strong><br>
-    Sittings at <strong>12.00, 2.30, 5.00 and 7.30</strong>
-  </p>
-
-  <p>
-    <strong>Booking is essential.</strong><br>
-    A <strong>£10 deposit per person</strong> is required to secure your table.
-  </p>
-
-  <p>
-    <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form"
-       class="card-link" target="_blank">
-      Book your table now
-    </a>
-  </p>
-
-  <p>or call <strong>02380 284690</strong></p>
-</div>
-        
-    </div>
+      <div class="card">
+        <img src="Mothers-Day-2026.jpg" alt="Mother's Day 2026 at The New Forest Inn">
+        <h3>Mother's Day 2026</h3>
+        <p><strong>Sunday 15th March</strong></p>
+        <p>
+          Save the date! Mother's Day will be here before we know it. Treat that special lady in your life to a delicious Sunday roast and a relaxed, welcoming atmosphere at The New Forest Inn.
+        </p>
+        <p><strong>Sunday Roasts available:</strong> Sittings at 12.00, 2.30, 5.00, and 7.30</p>
+        <p><strong>Booking is essential.</strong> A £10 deposit per person is required to secure your table.</p>
+        <p>
+          <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form" target="_blank">
+            Book your table now
+          </a>
+        </p>
+        <p>or call <strong>02380 284690</strong></p>
+      </div>
+    </section>
   </main>
 
-<div class="buttons">
-  <a href="../../newforestinn.html">⬅ Back to Pub Page</a>
-  <a href="../../home.html">⬅ Back to Home</a>
-</div>
-
+  <div class="buttons">
+    <a href="../../newforestinn.html">⬅ Back to Pub Page</a>
+    <a href="../../home.html">⬅ Back to Home</a>
+  </div>
 </body>
 </html>
