--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -138,11 +138,12 @@
         <p><strong>Sunday Roasts available:</strong> Sittings at 12.00, 2.30, 5.00, and 7.30</p>
         <p><strong>Booking is essential.</strong> A £10 deposit per person is required to secure your table.</p>
         <p>
+          Book your table now at<br>
           <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form" target="_blank">
-            Book your table now
-          </a>
+            www.thenewforestinn.co.uk
+          </a><br>
+          or call <strong>02380 284690</strong>.
         </p>
-        <p>or call <strong>02380 284690</strong></p>
       </div>
     </section>
   </main>
