--- a/Fighting-Cocks-images/Events-Promotions/promotions.html
+++ b/Fighting-Cocks-images/Events-Promotions/promotions.html
@@ -103,7 +103,7 @@
         <a href="promo-25.html"></a>
       </div>
       <div class="card">
-  <img src="Rooms Promo stay 3 days pay for 2.png" alt="Stay More, Pay Less – 3 Nights for the Price of 2">
+  <img src="Stay More Pay Less.png" alt="Stay More, Pay Less – 3 Nights for the Price of 2">
 
   <h3>Stay More, Pay Less</h3>
 
@@ -117,8 +117,8 @@
     • Free Wi-Fi<br>
     • Pet-friendly rooms<br>
     • En-suite with shower<br>
-    • Breakfast included<br>
-    • Access to exclusive offers<br><br>
+    • Free Parking<br>
+    • Daily Housekeeping<br><br>
 
     Book your stay now at<br>
     <a href="https://web-bookings.hotels.uk.com/#/booking/51730/items/availability?k=XbkHpDevv1inahpI6xTpMVzFxNTE3MzA%3D&r=1757511259827&a=2&c="
