--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -135,6 +135,37 @@
       </div>
 
       <div class="card">
+  <img src="NFI-Valentines-Day-2026.png" alt="Valentine’s Day at The New Forest Inn – Saturday 14th February">
+  
+  <h3>Valentine’s Day at The New Forest Inn</h3>
+  
+  <p><strong>Saturday 14th February</strong></p>
+  
+  <p>
+    Treat your loved one to a romantic meal at the cosiest pub in the New Forest.
+  </p>
+  
+  <p>
+    Celebrate Valentine’s Day in a warm, intimate setting with candlelight, crackling fires, and a relaxed, welcoming atmosphere – the perfect backdrop for a special evening together.
+  </p>
+  
+  <p>
+    Whether you’re enjoying a quiet dinner for two or a cosy night of great food and wine, let us help you celebrate romance the cosy way.
+  </p>
+  
+  <p>
+    Book your table now and make this Valentine’s Day one to remember.
+  </p>
+  
+  <p>
+    <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form" target="_blank">
+      www.thenewforestinn.co.uk
+    </a><br>
+    or call <strong>02380 284690</strong>.
+  </p>
+</div>
+
+      <div class="card">
         <img src="Mothers-Day-2026.jpg" alt="Mother's Day 2026 at The New Forest Inn">
         <h3>Mother's Day 2026</h3>
         <p><strong>Sunday 15th March</strong></p>
