--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -118,6 +118,34 @@
       </p>
     </div>
 
+    <!-- Friday Night Curry Night Card -->
+<div class="card">
+  <img src="Bold-Friday-Curry-Night.png" alt="Friday Night Curry Night at The Bold Forester, Marchwood">
+
+  <h3>Friday Night Curry Night</h3>
+
+  <p>
+    Join us every Friday evening for our delicious <strong>Curry Night</strong> at The Bold Forester, Marchwood.<br><br>
+
+    Enjoy a <strong>choice of four curries</strong>, served with:<br>
+    • Rice<br>
+    • Poppadoms<br>
+    • Naan bread<br>
+    • A selection of sauces<br><br>
+
+    Served from<br><br>
+    <strong>5pm onwards</strong><br><br>
+
+    <strong>Starting Friday 30th January</strong><br><br>
+
+    Book your table now at<br><br>
+    <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+      www.theboldforesternewforest.co.uk
+    </a><br>
+    or call <strong>02380 175588</strong>.
+  </p>
+</div>
+
     <!-- Valentine's Day -->
     <div class="card">
       <img src="Bold Valentines.png" alt="Valentine’s Day Chef’s Specials at The Bold Forester">
