--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -120,7 +120,7 @@
 
     <!-- Friday Night Curry Night Card -->
 <div class="card">
-  <img src="Bold-Friday-Curry-Night.png" alt="Friday Night Curry Night at The Bold Forester, Marchwood">
+  <img src="Bold Friday Curry Night.png" alt="Friday Night Curry Night at The Bold Forester, Marchwood">
 
   <h3>Friday Night Curry Night</h3>
 
