--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -96,21 +96,80 @@
 
   <main>
     <div class="card-grid">
-  <div class="card">
-  <img src="Events coming soon2.jpg" alt="Events Coming Soon">
-  <h3>Events at The Lamb Inn</h3>
-  <p><strong>No events scheduled at the moment</strong></p>
+  <!-- Valentine’s Day Dinner Card -->
+<div class="card">
+  <img src="Lamb-Valentines-Day-2026.jpg" alt="Valentine’s Day at The Lamb Inn, Nomansland">
+
+  <h3>Valentine’s Day</h3>
+
   <p>
-    We don’t have any events planned right now, but we’re always working on something special behind the scenes.<br><br>
-    Please check back soon or keep an eye on our website and social media for upcoming events and announcements.<br><br>
-    In the meantime, you’re very welcome to join us for great food, drinks, and a warm welcome.<br><br>
-    Book your table at<br>
+    Join us for an intimate <strong>Valentine’s Day evening</strong> at
+    The Lamb Inn, Nomansland.<br><br>
+
+    Enjoy our Chef’s specially curated menu, designed to make your evening
+    truly memorable, accompanied by a
+    <strong>complimentary glass of Rosé Prosecco</strong>.<br><br>
+
+    <strong>Saturday 14th February</strong><br><br>
+
+    Book now at<br><br>
     <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
       www.thelambnomansland.co.uk
     </a><br>
     or call <strong>01794 331331</strong>.
   </p>
 </div>
+      
+<!-- Galentine’s Day Cocktail Masterclass Card -->
+<div class="card">
+  <img src="Lamb-Galentines-Day-2026.jpg" alt="Galentine’s Day Cocktail Masterclass at The Lamb Inn, Nomansland">
+
+  <h3>Galentine’s Day Cocktail Masterclass</h3>
+
+  <p>
+    Celebrate <strong>Galentine’s Day</strong> with an interactive and fun
+    <strong>Cocktail Masterclass</strong> at The Lamb Inn.<br><br>
+
+    Bringing together old friends and friends you’ve not yet met for an
+    interactive drinking and dining experience — perfect for a night of
+    laughs, learning, and great cocktails.<br><br>
+
+    <strong>Saturday 14th February</strong><br><br>
+
+    Book your place now at<br><br>
+    <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+      www.thelambnomansland.co.uk
+    </a><br>
+    or call <strong>01794 331331</strong>.
+  </p>
+</div>
+
+<!-- Mother’s Day at The Lamb Inn -->
+<div class="card">
+  <img src="Lamb-Mothers-Day-Board.jpg" alt="Mother’s Day at The Lamb Inn, Nomansland">
+
+  <h3>Mother’s Day at The Lamb Inn</h3>
+
+  <p>
+    Celebrate <strong>Mother’s Day</strong> with us at The Lamb Inn and treat Mum
+    to a relaxed and delicious Sunday in the heart of the New Forest.<br><br>
+
+    Join us for our famous <strong>Sunday roasts</strong>, Mother’s Day
+    <strong>specials</strong>, and a warm, welcoming atmosphere — the perfect
+    way to say thank you.<br><br>
+
+    <strong>Sunday 15th March</strong><br><br>
+
+    <strong>£10 per person deposit required</strong><br><br>
+
+    Book your table now at<br><br>
+    <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+      www.thelambnomansland.co.uk
+    </a><br>
+    or call <strong>01794 331331</strong>.
+  </p>
+</div>
+
       
   </main>
 
