--- a/boldforester.html
+++ b/boldforester.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Bold Forester – Country Inns</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="assets/favicons/The_Bold_Forester.png" />
+
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
@@ -135,8 +139,8 @@
 
   <section>
     <div class="about">
-      <p>Welcome to The Bold Forester, Marchwood — A traditional country pub at the edge of the new forest, where great food, fine drinks & good company come together.
-        A lively and welcoming pub offering exceptional dining, a warm atmosphere & excellent drinks Explore our menus, book a table, and see what’s on.</p>
+      <p>Welcome to The Bold Forester, Marchwood — A traditional country pub at the edge of the New Forest, where great food, fine drinks & good company come together.
+        A lively and welcoming pub offering exceptional dining, a warm atmosphere & excellent drinks. Explore our menus, book a table, and see what’s on.</p>
     </div>
   </section>
 
@@ -149,10 +153,11 @@
     <a href="https://www.theboldforesternewforest.co.uk/the-bold-forester-chefs-daily-specials/">Chef's Daily Specials</a>
   </div>
 
-   <h2>Gallery</h2>
+  <h2>Gallery</h2>
   <div class="buttons">
     <a href="bold-forester-images/Gallery/">Gallery</a>
-    
+  </div>
+
   <h2>Drink Menus</h2>
   <div class="buttons">
     <a href="bold-forester-images/bold-forester-menus/drinks-menu/updated-drinks-menu-25th-feb.html">Drinks Menu</a>
