--- a/New-Forest-Inn-images/Events-Promotions/promotions.html
+++ b/New-Forest-Inn-images/Events-Promotions/promotions.html
@@ -96,17 +96,23 @@
 
   <main>
     <div class="card-grid">
-      <div class="card">
-        <img src="NFI DIRECT10.jpg" alt="Book Direct">
-        <h3>Book Direct</h3>
-        <p>Book Direct quoting DIRECT10 to get 10% OFF when reserving a room with us.<br><br>
-          Book your room(s) now at<br>
-          <a href="https://web-bookings.hotels.uk.com/#/booking/46267/items/availability?k=Pz3vpXoBrwIroy0WsnQ3AMu2JNDYyNjc%3D&r=1757510946698" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
-            https://www.thenewforestinn.co.uk/
-          </a><br>
-          or call <strong>02380 284690</strong>.
-        </p>
-      </div>
+  <div class="card">
+    <img src="Winter-Warmer-Room-Deal-2026.jpg" alt="Winter Warmer Room Deal">
+    <h3>Winter Warmer Room Deal</h3>
+    <p>
+      Did you know we have eight cosy rooms here at <strong>The New Forest Inn</strong>?<br><br>
+      Warm up this winter with our fantastic <strong>Winter Warmer</strong> offer – 
+      <strong>book for three nights and only pay for two!</strong><br><br>
+      This deal is valid <strong>seven days a week</strong> until <strong>26th March</strong>.<br><br>
+      Book direct on our website to grab this fabulous offer:<br>
+      <a href="https://www.thenewforestinn.co.uk/" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+        www.thenewforestinn.co.uk
+      </a><br>
+      or call <strong>02380 284690</strong>.
+    </p>
+    </div>
+  </div>
+
       <div class="card">
         <img src="../../Trusty Copy jan Feb Mar Promo.png" alt="25% Off Food Promo">
         <h3>Follow, Dine, Show – Save 25%</h3>
