--- a/New-Forest-Inn-images/Events-Promotions/promotions.html
+++ b/New-Forest-Inn-images/Events-Promotions/promotions.html
@@ -116,7 +116,7 @@
 
     <!-- Winter Warmer Room Deal -->
     <div class="card">
-      <img src="Winter-Warmer-Room-Deal-2026.jpg" alt="Winter Warmer Room Deal">
+      <img src="Winter-Warmer-Room-Deal-2026.jpeg" alt="Winter Warmer Room Deal">
       <h3>Winter Warmer Room Deal</h3>
       <p>
         Did you know we have <strong>eight cosy rooms</strong> here at <strong>The New Forest Inn</strong>?<br><br>
