--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -96,6 +96,40 @@
 
   <main>
     <div class="card-grid">
+  <!-- Pub Quiz Night Card -->
+<div class="card">
+  <img src="Pub-Quiz-Night-2.png" alt="Pub Quiz Night at The Lamb Inn, Nomansland">
+
+  <h3>Pub Quiz Night</h3>
+
+  <p>
+    <strong>FIRST PUB QUIZ NIGHT OF THE YEAR!</strong> 🧠<br><br>
+
+    Join us at <strong>The Lamb Inn, Nomansland</strong> for our buzzing
+    <strong>Pub Quiz Night</strong> and put your knowledge to the test!<br><br>
+
+    Gather your smartest (or most competitive!) mates —
+    teams of up to <strong>6 people</strong> — and quiz the night away while
+    helping to raise funds for the <strong>New Forest Trust</strong> 🌳<br><br>
+
+    <strong>Thursday 29th January</strong><br>
+    From <strong>7.30pm</strong> · <strong>£3 per person</strong><br><br>
+
+    Expect great prizes, good food, drinks, and a relaxed, friendly atmosphere.<br><br>
+
+    📍 The Lamb Inn, Nomansland<br>
+    📞 <strong>01794 331331</strong><br>
+    📧 <a href="mailto:info@thelambnomansland.co.uk" style="color:#e6d8b5; text-decoration:underline;">
+      info@thelambnomansland.co.uk
+    </a><br><br>
+
+    Find out more and view our latest offers at:<br>
+    <a href="https://www.thelambnomansland.co.uk" target="_blank" rel="noopener" style="color:#e6d8b5; text-decoration:underline;">
+      www.thelambnomansland.co.uk
+    </a>
+  </p>
+</div>
+
   <!-- Valentine’s Day Dinner Card -->
 <div class="card">
   <img src="Lamb-Valentines-Day-2026.jpg" alt="Valentine’s Day at The Lamb Inn, Nomansland">
