--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -130,6 +130,32 @@
   </p>
 </div>
 
+ <!-- National Yorkshire Pudding Day Card -->
+<div class="card">
+  <img src="Lamb-National-Yorkshire-Pudding-Day-2026.jpg" alt="National Yorkshire Pudding Day at The Lamb Inn, Nomansland">
+
+  <h3>National Yorkshire Pudding Day</h3>
+
+  <p>
+    Join us at <strong>The Lamb Inn, Nomansland</strong> as we celebrate
+    <strong>National Yorkshire Pudding Day</strong> with this much-loved
+    British classic.<br><br>
+
+    Honouring the <strong>18th-century “dripping pudding” tradition</strong>,
+    our Yorkshire puddings are crisp, golden, and proudly traditional.<br><br>
+
+    <strong>Sunday 1st February</strong><br><br>
+
+    Book in with us to celebrate the great Yorkshire pudding!<br><br>
+
+    Book now at<br><br>
+    <a href="https://www.thelambnomansland.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+      www.thelambnomansland.co.uk
+    </a><br>
+    or call <strong>01794 331331</strong>.
+  </p>
+</div>
+     
   <!-- Valentine’s Day Dinner Card -->
 <div class="card">
   <img src="Lamb-Valentines-Day-2026.jpg" alt="Valentine’s Day at The Lamb Inn, Nomansland">
