--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -132,7 +132,7 @@
 
  <!-- National Yorkshire Pudding Day Card -->
 <div class="card">
-  <img src="Lamb-National-Yorkshire-Pudding-Day-2026.jpg" alt="National Yorkshire Pudding Day at The Lamb Inn, Nomansland">
+  <img src="Lamb-National-Yorkshire-Pudding-Day-2026.png" alt="National Yorkshire Pudding Day at The Lamb Inn, Nomansland">
 
   <h3>National Yorkshire Pudding Day</h3>
 
