--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -144,6 +144,7 @@ A vibrant pub known for its atmosphere, fantastic food, and a great selection of
   <h2>Food Menus</h2>
   <div class="buttons">
     <a href="Fighting-Cocks-images/fighting-cocks-menus/breakfast-menu/FC New Breakfast Menu.html">Breakfast Menu</a>
+    <a href="Fighting-Cocks-images/fighting-cocks-menus/brunch-menu/FC Brunch Menu 2026 A5.html">Brunch Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/main-menu/FC-WINTER-25-MENU.html">Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/sunday-menu/FC WINTER 25 SUNDAY MENU.html">Sunday Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/kids-menu/New-Kids-menu-Fighting-Cocks.html">Kids Menu</a>
