--- a/Fighting-Cocks-images/Events-Promotions/events.html
+++ b/Fighting-Cocks-images/Events-Promotions/events.html
@@ -122,7 +122,7 @@
 
       <!-- Valentine’s Weekend Card -->
       <div class="card">
-        <img src="Valentines Day Dinner Poster.png" alt="Valentine’s Weekend at The Fighting Cocks">
+        <img src="FC Valentines Menu 2026.png" alt="Valentine’s Weekend at The Fighting Cocks">
 
         <h3>Valentine’s Weekend</h3>
 
