--- a/Royal-Oak-images/Events-Promotions/events.html
+++ b/Royal-Oak-images/Events-Promotions/events.html
@@ -96,14 +96,19 @@
 
   <main>
     <div class="card-grid">
-       <div class="card">
-  <img src="Events coming soon.jpg" alt="Events Coming Soon">
-  <h3>Events at The Royal Oak</h3>
-  <p><strong>No events scheduled at the moment</strong></p>
+<!-- Valentine’s Weekend Card -->
+<div class="card">
+  <img src="Red-Gold-Valentine-Menu.jpg" alt="Valentine’s at The Royal Oak">
+
+  <h3>Valentine’s</h3>
+
+  <p>Love is in the air… and there’s no better time to join us than Valentine’s ❤️</p>
+
+  <p>Celebrate this day with indulgent romantic specials, perfectly paired with much-loved dishes from our main menu.</p>
+
+  <p><strong>Saturday 14th February 2026</strong></p>
+
   <p>
-    We don’t have any events planned right now, but we’re always working on something special behind the scenes.<br><br>
-    Please check back soon or keep an eye on our website and social media for upcoming events and announcements.<br><br>
-    In the meantime, you’re very welcome to join us for great food, drinks, and a warm welcome.<br><br>
           Book your table now at<br>
           <a href="https://www.theroyaloakbeaulieu.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
            https://www.theroyaloakbeaulieu.co.uk/
