--- a/home.html
+++ b/home.html
@@ -251,9 +251,8 @@
 
   <!-- GLOBAL VALENTINE'S NOTICE (change text for Mother's Day later) -->
   <div class="global-notice">
-    ❤️ Valentine’s Weekend Across All Country Inns
-    <span>Friday 13th – Sunday 15th February</span>
-    <a href="valentines.html">View Menus & Book</a>
+    ❤️ Valentine’s Across All Country Inns
+    <span>Saturday 14th February</span>
   </div>
 
   <!-- PROMO BANNER -->
