--- a/home.html
+++ b/home.html
@@ -270,8 +270,8 @@
 
       <!-- GLOBAL VALENTINE'S CARD -->
       <div class="event-card">
-        <img src="valentines-global.jpg" alt="Valentine’s Weekend">
-        <h3>Valentine’s Weekend</h3>
+        <img src="valentines-global.png" alt="Valentine’s">
+        <h3>Valentine’s</h3>
         <p><strong>
           Celebrate love across all Country Inns with romantic specials and classic favourites.
         </strong></p>
