--- a/Lamb-Inn-images/Events-Promotions/events.html
+++ b/Lamb-Inn-images/Events-Promotions/events.html
@@ -158,7 +158,7 @@
      
   <!-- Valentine’s Day Dinner Card -->
 <div class="card">
-  <img src="Lamb-Valentines-Day-2026.jpg" alt="Valentine’s Day at The Lamb Inn, Nomansland">
+  <img src="Valentines-Day-Menu-1.png" alt="Valentine’s Day at The Lamb Inn, Nomansland">
 
   <h3>Valentine’s Day</h3>
 
