--- a/boldforester.html
+++ b/boldforester.html
@@ -146,6 +146,7 @@
 
   <h2>Food Menus</h2>
   <div class="buttons">
+    <a href="bold-forester-images/bold-forester-menus/brunch-menu/Bold-Brunch-Menu-2026.html">Brunch Menu</a>
     <a href="bold-forester-images/bold-forester-menus/main-menu/bold-new-main-menu-25.html">Main Menu</a>
     <a href="bold-forester-images/bold-forester-menus/sunday-menu/bold-new-sunday-menu-25.html">Sunday Menu</a>
     <a href="bold-forester-images/bold-forester-menus/kids-menu/bold-new-kids-menu-25.html">Kids Menu</a>
