--- a/lambinn.html
+++ b/lambinn.html
@@ -143,6 +143,7 @@ steeped in heritage, The Lamb Inn offers hearty food, roaring fires, and a true 
 
   <h2>Food Menus</h2>
   <div class="buttons">
+    <a href="Lamb-Inn-images/Lamb-Inn-Menus/brunch-menu/Lamb Brunch Menu.html">Brunch Menu</a>
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/main-menu/Autumn-Winter-Menu-25.html">Menu</a>
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/sunday-menu/Sunday-25.26-.html">Sunday Menu</a>
     <a href="Lamb-Inn-images/Lamb-Inn-Menus/kids-menu/Lamb-Kids-Menu-april-25.html">Kids Menu</a>
