--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -137,6 +137,24 @@
     or call <strong>02380 284690</strong>.
   </p>
 </div>
+      <div class="card">
+  <img src="Sausage-Week-2026.jpeg" alt="Super Sausage Week at The New Forest Inn, Emery Down">
+  <h3>Super Sausage Week</h3>
+  <p><strong>16th February to 22nd February</strong></p>
+  <p>
+    Come along and enjoy a delicious special menu featuring gourmet sausage dishes at
+    <strong>The New Forest Inn, Emery Down</strong>.
+  </p>
+  <p>
+    Expect a variety of expertly crafted sausages, packed with flavour and served in true New Forest Inn style.
+  </p>
+  <p>
+    Find out more at<br>
+    <a href="https://www.thenewforestinn.co.uk" target="_blank">
+      www.thenewforestinn.co.uk
+    </a>
+  </p>
+</div>
 
       <div class="card">
         <img src="Mothers-Day-2026.jpg" alt="Mother's Day 2026 at The New Forest Inn">
